<resources>
    <string name="app_name">RILAFragments</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>


    <string name="descubrimientos">Descubrimientos</string>
    <string name="novedades">Novedades</string>
    <string name="buscador">Buscador</string>
    <string name="ayuda">Ayuda</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>

    <!--String MetodosPago-->
    <string name="banco_text">Banco</string>
    <string name="caducidad_text" translatable="false">Cad</string>
    <string name="fecha" translatable="false">04/23</string>
    <string name="numero_cuenta" translatable="false">****  ****  ****  0011</string>
    <string name="btn_text">Escanear Tarjeta</string>

    <string name="numeroTelefonoAyuda">Para ponere en contacto con nopsotros llame al siguiente número: <b>111 222 333</b> </string>
    <string name="DescCambiarContraseña">Introduzca un email y le envaremos un correo para cambiar de contraseña</string>
    <string name="entrar">ENTRAR</string>
    <string name="cambiar_contrasenya">Cambiar contraseña</string>
    <string name="log_in" translatable="false">Log in</string>
    <string name="direcci_n_de_e_mail">Dirección de e-mail</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvido_su_contrase_a">Olvido su contraseña?</string>
    <string name="pagar">pagar</string>
    <string name="manual">Manual</string>
    <string name="escanear">Escanear</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="entrar_sin_cuenta">Entrar sin cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="comprar">Comprar</string>
    <string name="europa">Europa</string>
    <string name="frica">África</string>
    <string name="asia">Asia</string>
    <string name="am_rica">América</string>
    <string name="oceania">Oceania</string>
    <string name="ciudades">CIUDADES</string>
    <string name="una_selecci_n_aleatoria_que_quiza_te_prodr_a_interesar">Una selección aleatoria que quiza te prodría interesar</string>
    <string name="correo">Correo</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
</resources>