<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        android:id="@+id/app_bar_main"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="60dp"
        android:background="#FAF6EA"
        android:fitsSystemWindows="true"
        android:paddingBottom="20dp"
        app:headerLayout="@layout/nav_header_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nav_header_height"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nav_novedades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:padding="15dp"
                android:text="@string/novedades"
                android:textAlignment="center"
                android:textColor="@color/PottersClay" />

            <TextView
                android:id="@+id/nav_Ayuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:padding="15dp"
                android:text="@string/ayuda"
                android:textAlignment="center"
                android:textColor="@color/PottersClay" />

            <TextView
                android:id="@+id/nav_buscador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:padding="15dp"
                android:text="@string/buscador"
                android:textAlignment="center"
                android:textColor="@color/PottersClay" />

            <TextView
                android:id="@+id/nav_descubrimientos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:padding="15dp"
                android:text="@string/descubrimientos"
                android:textAlignment="center"
                android:textColor="@color/PottersClay" />

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>
    <!--app:itemIconTint=" "-->

</androidx.drawerlayout.widget.DrawerLayout>