<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF6EA"
    tools:context=".metodosPago.MetodosDePagoActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="178dp"
        android:layout_marginTop="167dp"
        android:elevation="5dp"
        app:cardBackgroundColor="@color/colorPrimaryTarjeta"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="37dp"
                android:src="@drawable/chipt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="22dp"
                android:src="@drawable/mastercard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/lblnumCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/numero_cuenta"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginBottom="23dp"
                android:fontFamily="@font/roboto"
                android:text="@string/banco_text"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/caducidad_text"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/lblnumCaducidad"
                app:layout_constraintEnd_toStartOf="@+id/lblnumCaducidad"
                app:layout_constraintTop_toTopOf="@+id/lblnumCaducidad"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/lblnumCaducidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="23dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/fecha"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnPagarMetodosPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/Albescent_White"
        android:paddingLeft="60dp"
        android:paddingTop="15dp"
        android:paddingRight="60dp"
        android:paddingBottom="15dp"
        android:text="pagar"
        android:textColor="@color/PottersClay"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbScannerMetodosPago" />

    <CheckBox
        android:id="@+id/cbManualMetodosPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Manual"
        app:layout_constraintEnd_toEndOf="@+id/cbScannerMetodosPago"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cbScannerMetodosPago"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <CheckBox
        android:id="@+id/cbScannerMetodosPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Escanear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbManualMetodosPago" />

</androidx.constraintlayout.widget.ConstraintLayout>