<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bianca"
    tools:context=".fragments.perfil.PerfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Perfil"
            android:textAlignment="center"
            android:textColor="@color/PottersClay"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imgViewUsuarioPerfilActivity"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/usuarioconelmas" />


        <TextView
            android:id="@+id/lblAcercaDeTiPerfilActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_light"
            android:text="Acerca de ti"
            android:textColor="#825D33" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblNombrePerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/nombre"
                android:textColor="#825D33" />
            <TextView
                android:id="@+id/lblNombreVariablePerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1.5"
                android:fontFamily="@font/roboto_light"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="#825D33" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblCorreoPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/correo"
                android:textColor="#825D33" />

            <TextView
                android:id="@+id/lblCorreoVariablePerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1.5"
                android:fontFamily="@font/roboto_light"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="#825D33" />

        </LinearLayout>

        <Button
            android:id="@+id/btnPrueba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cerrar_sesi_n" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"/>

    </LinearLayout>

</FrameLayout>